force-app/main/default/objects/Mass_Edit_Settings__c/Mass_Edit_Settings__c.object-meta.xml
<CustomObject>
    <label>ME Core: Column</label>
    <nameField>
        <label>Mass Edit Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Column</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>