force-app/main/default/objects/Mass_Edit_Settings__c/fields/Field_Style__c.field-meta.xml
<CustomField>
    <fullName>Field_Style__c</fullName>
    <label>Field Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>