force-app/main/default/objects/Mass_Edit_Settings__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <referenceTo>SL_Mass_Implementation__c</referenceTo>
    <relationshipName>Mass_Edit_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>