force-app/main/default/objects/Mass_Edit_Settings__c/fields/isEditable__c.field-meta.xml
<CustomField>
    <fullName>isEditable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isEditable</label>
    <type>Checkbox</type>
</CustomField>