force-app/main/default/objects/Mass_Edit_Settings__c/fields/IsSortable__c.field-meta.xml
<CustomField>
    <fullName>IsSortable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsSortable</label>
    <type>Checkbox</type>
</CustomField>