force-app/main/default/objects/Mass_Edit_Settings__c/fields/Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Field__c</fullName>
    <label>Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>